# nyt-crossword-scraper-v1

./: .gitignore  README.md  comments_2023-11-08.csv  comments_2023-11-09.csv  comments_2023-11-10.csv  comments_2023-11-13.csv  comments_2023-11-15.csv  comments_2023-11-17.csv  comments_2023-11-25.csv  comments_2023-11-29.csv  comments_2023-11-30.csv  comments_2023-12-05.csv  comments_2023-12-06.csv  comments_2023-12-07.csv  comments_2023-12-08.csv  comments_2023-12-09.csv  comments_2023-12-10.csv  comments_2023-12-11.csv  comments_2023-12-14.csv  comments_2023-12-15.csv  comments_2023-12-17.csv  comments_2023-12-19.csv  comments_2023-12-20.csv  comments_2023-12-21.csv  comments_2023-12-25.csv  comments_2023-12-26.csv  comments_2023-12-30.csv  comments_2024-01-02.csv  comments_2024-01-03.csv  comments_2024-01-04.csv  comments_2024-01-05.csv  comments_2024-01-08.csv  comments_2024-01-09.csv  comments_2024-01-10.csv  comments_2024-01-13.csv  comments_2024-01-14.csv  comments_2024-01-15.csv  comments_2024-01-17.csv  comments_2024-01-18.csv  comments_2024-01-20.csv  (+52 more)
comments/: comments-2024-10-13.json  comments-2024-10-14.json  comments-2024-10-15.json  comments-2024-10-16.json  comments-2024-10-17.json  comments-2024-10-18.json  comments-2024-10-19.json  comments-2024-10-20.json  comments-2024-10-21.json  comments-2024-10-22.json  comments-2024-10-23.json  comments-2024-10-24.json  comments-2024-10-25.json  comments-2024-10-26.json  comments-2024-10-27.json  comments-2024-10-28.json  comments_2023-11-11.csv  comments_2023-11-12.csv  comments_2023-11-14.csv  (+263 more)
src/: analyze.py  (+4 more)
(+1 files in other folders)
